syntax = "proto3";

package lerp;

message Point {
    float x = 1;
    float y = 2;
}

message UdpPolygon {
    repeated Point points = 1;
}

enum GameEntityBaseType {
    CHARACTER = 0;
    PROJECTILE = 1;
    ENEMY = 2;
    WALL = 3;
    MELEE_ATTACK = 4;
}

enum TileType {
    FLOOR = 0;
    WATER = 1;
    FOREST = 2;
    ROCK = 3;
}

enum UdpSpell {
    SPELL_PROJECTILE = 0;
    SPELL_FROZEN_ORB = 1;
    SPELL_MELEE_ATTACK = 2;
}